Add Github auth
Setup Next auth

Add Github provider

Add basic protection for client route

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgres://postgres:12345@localhost:5432/cooling_systems"
+GITHUB_ID="900fb2b355b90c3e8d5a"
+GITHUB_SECRET="53b6a864fa7eab5969f2cec030e732f50d676334"
+NEXTAUTH_SECRET=XY3HnyDBL0TiFT+3VSGM3eHSxrvbqeeSE+aDl+2qFug=
+NEXTAUTH_URL=http://localhost:3000
