--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "whatwg-fetch": "^3.6.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
